fix http responses
